--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		*{
 			user-select: none;
       color: white;
+      zoom: 0.95;
 		}
     body{
-	zoom: 0.9;
       background-color: black;
       overflow: hidden;
     }
@@ -306,7 +306,7 @@
     	margin: 35px;
     }
     .num_opt{
-    	background: lightblue;
+    	background: darkblue;
     	width: 300px;
     	height: 150px;
     	border-radius: 50px;
@@ -318,7 +318,8 @@
     	line-height: 150px;
     }
     .num_opt:hover{
-    	background: yellow;
+    	background: lightblue;
+      transition: 0.5s;
     }
     .result_element{
     	text-align: center;
@@ -476,11 +477,11 @@
       height: 8px;
       cursor: pointer;
       text-align: center;
-      margin: 3px;
+      margin: 15px;
       border-radius: 5px;
       text-decoration: none;
       padding: 10px;
-      font-size: 18px;
+      font-size: 25px;
       line-height: 10px;
       transition: .3s;
       -webkit-transition: .3s;
